# PrinterManager

./: CMakeLists.txt  main.cpp
qml/: main.qml
scr/: db_manager.cpp  db_manager.h  docxtopdf.cpp  docxtopdf.h  dropboxapi.cpp  dropboxapi.h  params.cpp  params.h  printermanager.cpp  printermanager.h  sqlite.cpp  sqlite.h  userip.cpp  userip.h
